[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/SimpleMovingSpatial/SimpleMovingSpatial.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 16.8, 9.5, 16.6 )

[node name="SimpleMovingSpatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Point1" type="Position3D" parent="."]

[node name="Point2" type="Position3D" parent="."]

[node name="MovingSpatial" type="Spatial" parent="."]

[node name="Area" type="Area" parent="MovingSpatial"]
__meta__ = {
"_editor_description_": "If the player is in this area, it will be moving along with the moving spatial."
}

[node name="CollisionShape" type="CollisionShape" parent="MovingSpatial/Area"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="body_entered" from="MovingSpatial/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="MovingSpatial/Area" to="." method="_on_Area_body_exited"]
